[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150
offset_top = -200
offset_right = 150
offset_bottom = 200
alignment = 1

[node name="TitleLabel" type="Label" parent="VBox"]
text = "Game Title"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBox"]
text = "Start Game"

[node name="ContinueButton" type="Button" parent="VBox"]
text = "Continue"

[node name="SettingsButton" type="Button" parent="VBox"]
text = "Settings"

[node name="ExitButton" type="Button" parent="VBox"]
text = "Exit"

[connection signal="pressed" from="VBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBox/ExitButton" to="." method="_on_exit_button_pressed"]
